--- a/src/components/App.css
+++ b/src/components/App.css
@@ -34,6 +34,7 @@
     flex-wrap: wrap;
     font-size: 20px;
     color:white;
+    text-align: left;
   }
 
   .list-book{
@@ -43,3 +44,4 @@
     margin: 10px;
     width: 45%;
   }
+
